# ray

./: CMakeLists.txt  Doxyfile.in  LICENSE  THANKS
cmake/: UseDoxygen.cmake
src/: camera.cpp  camera.h  common.h  image.cpp  image.h  main.cc  main.cpp  main.h  ray.cc  ray.cpp  ray.h  rendersurface.cpp  rendersurface.h  scene.cc  scene.cpp  scene.h  viewplane.cc  viewplane.cpp  viewplane.h
src/primitives/: plane.cc  plane.cpp  plane.h  primitive.cc  primitive.cpp  primitive.h  sphere.cc  sphere.cpp  sphere.h
src/renderers/: ppm.cc  ppm.cpp  ppm.h  rendertarget.cc  rendertarget.cpp  rendertarget.h
src/samplers/: sampler.cc  sampler.h
src/tracers/: singlesphere.cc  singlesphere.cpp  singlesphere.h  tracer.cc  tracer.cpp  tracer.h
